--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
+							<ul class="actions small">
+								<li><a href="#first" class="button small wide smooth-scroll-middle">Explore our research</a></li>
+								<li><a href="#second" class="button small wide smooth-scroll-middle">Go to resources</a></li>
+							</ul>
 							<h1>Dr Yawei Liu (刘亚伟)</h1>
 							<h2>Biographical details</h2>
 							<p class="major">
@@ -44,9 +48,6 @@
 								areas including health and renewable energy. To inspire this work and to stimulate research in real systems we often work closely 
 								with experimentalists.
 							</p>
-							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Explore our research</a></li>
-							</ul>
 						</div>
 						<div class="image">
 							<img src="images/foam_bubbles.jpg" alt="" />
@@ -315,7 +316,7 @@
 					</section>
 
 				<!-- Seven -->
-					<section class="wrapper style1 align-center">
+					<section class="wrapper style1 align-center" id="second">
 						<div class="inner">
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
