--- a/academic_tree/index.html
+++ b/academic_tree/index.html
@@ -105,11 +105,20 @@
 						</section>
 					</section>
 
+					
+
 			</div>
+
+
+
+			
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
+					<ul class="actions">
+						<li><a href=../index.html class="button">HOME</a></li>
+					</ul>
 					<ul class="menu">
 						<li>&copy; 2021 Yawei Liu. All rights reserved. <ba/>
 							Images: Any image presented in this website may be subject 
