--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chalkboard-teacher"></span>
-									<h3>Presentations & Posters</h3>
+									<h3>Presentations</h3>
 									<p>
 									</p>
 								</section>
