--- a/research_notes/index.html
+++ b/research_notes/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>index</title>
+<title>contents</title>
 
 
 <style type="text/css">
@@ -337,7 +337,7 @@ kbd {
 
 <h2 id="toc_2"></h2>
 
-<h4 id="toc_3">1. 2021/02/13 Parameters in DPD (Dissipative Particle Dynamics) model and the units conversation <a href="notes/dpd20210213.html">more...</a></h4>
+<h4 id="toc_3">1. 2021/02/13 Parameters in DPD (Dissipative Particle Dynamics) model and the units conversion <a href="notes/dpd20210213.html">more...</a></h4>
 
 <h2 id="toc_4"></h2>
 
