--- a/research_notes/notes/dpd20210213.html
+++ b/research_notes/notes/dpd20210213.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>dpd20210213</title>
+<title>Parameters in DPD (Dissipative Particle Dynamics) model and the units conversion</title>
 
 
 <style type="text/css">
