--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								of the bubble behaviors at nanoscale regime.
 							</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="projects/nanobubbles/index.html" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
