--- a/publications/publications_list.html
+++ b/publications/publications_list.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>publications_list</title>
+<title>Dr Yawei Liu - Publications list</title>
 
 
 <style type="text/css">
