--- a/projects/membrane/index.html
+++ b/projects/membrane/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Membrane materials</title>
+		<title>Dr Yawei Liu - Membrane materials</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
