--- a/research_notes/notes/dpd20210213.html
+++ b/research_notes/notes/dpd20210213.html
@@ -339,8 +339,8 @@ kbd {
 
 <h3 id="toc_2">DPD model</h3>
 
-<p>In the DPD model, one DPD bead represents \(N_m\) fluid (e.g. water) molecules. Here, \(N_m\) is also called coarse-graining (CG) degree. The DPD beads interact with each other via a conservative force \(\textbf{F}_{ij}^C = A (1-r_{ij}/r_c) \textbf{e}_{ij}\), a dissipative force
-\(\textbf{F}_{ij}^D = -\gamma(1-r_{ij}/r_c)^2 (\textbf{e}_{ij} \cdot \textbf{v}_{ij}) \textbf{e}_{ij}\), and a random force \(\textbf{F}_{ij}^R\) given by \(\textbf{F}_{ij}^R = \xi (1-r_{ij}/r_c) \theta_{ij} (\Delta t)^{-1/2} \textbf{e}_{ij}\) between bead \(i\) and \(j\) and all forces vanish at \(r\ge r_c\).
+<p>In the DPD model <sup>[1],</sup> one DPD bead represents \(N_m\) fluid (e.g. water) molecules. Here, \(N_m\) is also called coarse-graining (CG) degree. The DPD beads interact with each other via a conservative force \(\textbf{F}_{ij}^C = A (1-r_{ij}/r_c) \textbf{e}_{ij}\), a dissipative force
+\(\textbf{F}_{ij}^D = -\gamma(1-r_{ij}/r_c)^2 (\textbf{e}_{ij} \cdot \textbf{v}_{ij}) \textbf{e}_{ij}\), and a random force \(\textbf{F}_{ij}^R\) given by \(\textbf{F}_{ij}^R = \xi (1-r_{ij}/r_c) \theta_{ij} (\Delta t)^{-&frac12;} \textbf{e}_{ij}\) between bead \(i\) and \(j\) and all forces vanish at \(r\ge r_c\).
 * \(r_{ij}=|\textbf{r}_{ij}|\): the centre-to-centre distance between the two beads.
 * \(\textbf{e}_{ij}=\textbf{r}_{ij}/r_{ij}\): the direction vector pointing between the two beads.
 * \(\textbf{v}_{ij}\): the vector difference in velocities between the two beads.
@@ -386,27 +386,42 @@ However, above choice for \(\Delta t\) and \(\gamma\) yields very small Schmidt 
 
 <h3 id="toc_4">Units conversion</h3>
 
-<p>The conversation between DPD units (\(r_c\), \(k_BT\), \(m\) and \(\tau\)) and real units ([m], [J], [kg] and [s]) is obtained from the key macroscopic information recovered by the model. If quantities in DPD units are labeled with \(_{sim}\) and in real units are labeled with \(_{real}\), one would have
-* \(m=N_m M_{real}/N_A\) with \(M_{real}\) the mole mass of the fluid (e.g. water) and \(N_A\) the Avogadro constant.
-* \(r_c=(m\rho_{sim}/\rho_{real})^{1/3}\) with \(\rho_{real}\) the mass density of the fluid.
-* \(k_BT = k_B \cdot T\) with \(k_B=1.38064853e-23 J\cdot K\) and \(T\) is the system temperature in \(K\).
-* The time unit \(\tau\) can be chosen in different ways.
-  * By taking the long-term self-diffusion constant into account, \(\tau=N_m r_c^2 D_{sim}/D_{real}\) with \(D\) the diffusion constant. Sometimes, this relation is also used to determine \(N_m\).
-  * If the viscous processes are the main parts, then \(\tau=r_c^2 \nu_{sim}/\nu_{real}\) with \(\nu\) the kinematic viscosity.
-  * Or \(\tau=r_c/U_{ref}\) in which the reference velocity \(U_{ref}\) is chosen as either system thermal velocity \((k_BT/m)^{1/2}\) or the characteristic velocity of the real flow.</p>
+<p>The conversation between DPD units (\(r_c\), \(k_BT\), \(m\) and \(\tau\)) and real units ([m], [J], [kg] and [s]) is obtained from the key macroscopic information recovered by the model. If quantities in DPD units are labeled with \(_{sim}\) and in real units are labeled with \(_{real}\), one would have</p>
+
+<ul>
+<li>\(m=N_m M_{real}/N_A\) with \(M_{real}\) the mole mass of the fluid (e.g. water) and \(N_A\) the Avogadro constant.</li>
+<li>\(r_c=(m\rho_{sim}/\rho_{real})^{1/3}\) with \(\rho_{real}\) the mass density of the fluid.</li>
+<li>\(k_BT = k_B \cdot T\) with \(k_B=1.38064853e-23\) J\(\cdot\)K and \(T\) is the system temperature in K.</li>
+<li>The time unit \(\tau\) can be chosen in different ways.
+
+<ul>
+<li>By taking the long-term self-diffusion constant into account, \(\tau=N_m r_c^2 D_{sim}/D_{real}\) with \(D\) the diffusion constant. Sometimes, this relation is also used to determine \(N_m\).</li>
+<li>If the viscous processes are the main parts, then \(\tau=r_c^2 \nu_{sim}/\nu_{real}\) with \(\nu\) the kinematic viscosity.</li>
+<li>Or \(\tau=r_c/U_{ref}\) in which the reference velocity \(U_{ref}\) is chosen as either system thermal velocity \((k_BT/m)^{&frac12;}\) or the characteristic velocity of the real flow.</li>
+</ul></li>
+</ul>
 
 <h3 id="toc_5">Example</h3>
 
-<p>A NVT simulation with 1000 DPD beads in a cubic box is carried out by LAMMPS. The parameters are: \(\rho^*=3\); \(A=104\) for \(N_m=4\); \(\gamma=100\); \(\Delta t=0.005\). Then, by comparing the DPD fluid with the water at \(T=298 K\), we have:
-* Mass \(m=1.1969\times10^{-25}\) <a href="$m=N_m%20M_%7Breal%7D/N_A$">kg</a>
-* Length \(r_c=7.1125\times10^{-10}\) <a href="$r_c=(mrho_%7Bsim%7D/rho_%7Breal%7D)%5E%7B1/3%7D$">m</a>
-* Energy \(k_BT = 4.1143\times10^{-21}\) <a href="$k_BT%20=%20k_B%20cdot%20T$">J</a>
-* Time \(\tau = 3.8363\times10^{-12}\) <a href="$tau=r_csqrt%7Bm/k_BT%7D$">s</a>
-As a results, the kinematic viscosity for the DPD fluid is \(\nu=1.569 r_c^2/\tau = 2.069\times10^{-7}\) <a href="$nu=8.935times10%5E%7B-7%7D$%20%5Bm$%5E2$/s%5D%20for%20water">m\(^2\)/s</a>.</p>
+<p>A NVT simulation with 1000 DPD beads in a cubic box is carried out by LAMMPS. The parameters are: \(\rho^*=3\); \(A=104\) for \(N_m=4\); \(\gamma=100\); \(\Delta t=0.005\). Then, by comparing the DPD fluid with the water at \(T=298\) K, we have:</p>
+
+<ul>
+<li>Mass \(m=1.1969\times10^{-25}\) kg (\(m=N_m M_{real}/N_A\))</li>
+<li>Length \(r_c=7.1125\times10^{-10}\) m (\(r_c=(m\rho_{sim}/\rho_{real})^{1/3}\))</li>
+<li>Energy \(k_BT = 4.1143\times10^{-21}\) J (\(k_BT = k_B \cdot T\))</li>
+<li>Time \(\tau = 3.8363\times10^{-12}\) s (\(\tau=r_c\sqrt{m/k_BT}\) )
+As a results, the kinematic viscosity for the DPD fluid is \(\nu=1.569 r_c^2/\tau = 2.069\times10^{-7}\) m\(^2\)/s (\(\nu=8.935\times10^{-7}\) m\(^2\)/s for water).</li>
+</ul>
+
+<p>Also see our published papers <sup>[2,3]</sup> for some particular examples.</p>
 
 <h3 id="toc_6">References</h3>
 
-<p>(1) <a href="http://aip.scitation.org/doi/10.1063/1.474784">Groot, R. D.; Warren, P. B. Dissipative Particle Dynamics: Bridging the Gap between Atomistic and Mesoscopic Simulation. J. Chem. Phys. 1997, 107 (11), 4423–4435.</a></p>
+<p>[1] <a href="http://aip.scitation.org/doi/10.1063/1.474784">Groot, R. D.; Warren, P. B. Dissipative Particle Dynamics: Bridging the Gap between Atomistic and Mesoscopic Simulation. J. Chem. Phys. 1997, 107 (11), 4423–4435.</a></p>
+
+<p>[2] <a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.202006753">Zhang, H.; Liu, Y.; Shahidan, M. F. S.; Kinnear, C.; Maasoumi, F.; Cadusch, J.; Akinoglu, E. M.; James, T. D.; Widmer‐Cooper, A.; Roberts, A.; et al. Direct Assembly of Vertically Oriented, Gold Nanorod Arrays. Adv. Funct. Mater. 2021, 31 (6), 2006753.</a></p>
+
+<p>[3] <a href="http://aip.scitation.org/doi/10.1063/5.0013223">Liu, Y.; Bernardi, S.; Widmer-Cooper, A. Stability of Pinned Surface Nanobubbles against Expansion: Insights from Theory and Simulation. J. Chem. Phys. 2020, 153 (2), 024704.</a></p>
 
 <h2 id="toc_7"></h2>
 
