--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 							<h2>34 papers have been published in jounrals including Phys. Rev. Lett., Adv. Funct. Mater., J. Chem. Phys., etc.</h2>
 							<h3>I want to express my heartfelt thanks to my supervisors - 
 								Prof. Daan Frenkel, Prof. Xianren Zhang, Dr. Asaph Widmer-cooper - 
-								and all collaborators, for letting me be a part of these great work. 
+								and all collaborators/colleagues, for letting me be a part of these great work. 
 								Special acknowledgment is given to Prof. Wenchuan Wang who always helps me a lot.
 							</h3>
 						</div>
@@ -369,7 +369,8 @@
 							<h4><a href="mailto:yawei.liu@sydney.edu.au">yawei.liu@sydney.edu.au</a></h4>
 							
 							<li><span class="fab fa-weixin"> </span></li> <br />
-							<img src="" alt="订阅号 to be lunched" />
+							<h4>Wechat Subscription</h4>
+							<img src="images/wechat.png" alt="订阅号" width="80" height="80" />
 						</ul>
 
 						<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
