--- a/research_notes/notes/20210214_A new place to see our reseaches.html
+++ b/research_notes/notes/20210214_A new place to see our reseaches.html
@@ -342,7 +342,7 @@ kbd {
 <ul>
 <li>Overview of my current research interests.</li>
 <li>Published work and presentations.</li>
-<li>Notes on our researches, including summaries of literatures, discussions on technical problem, etc.</li>
+<li>Notes on our researches, including summaries of literatures, discussions on technical problems, etc.</li>
 <li>Home-made codes.</li>
 <li>Experiences of using softwares/packages.</li>
 <li>etc.</li>
