--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<ul class="actions small">
-								<li><a href="#first" class="button small wide smooth-scroll-middle">Explore our research</a></li>
-								<li><a href="#second" class="button small wide smooth-scroll-middle">Go to resources</a></li>
+								<li><a href="#first" class="button small wide smooth-scroll-middle">Rresearches</a></li>
+								<li><a href="research_notes/index.html" class="button small wide smooth-scroll-middle">Notes</a></li>
+								<li><a href="#second" class="button small wide smooth-scroll-middle">More</a></li>
 							</ul>
 							<h1>Dr Yawei Liu (刘亚伟)</h1>
 							<h2>Biographical details</h2>
