--- a/research_notes/notes/20210214_A new place to see our reseaches.html
+++ b/research_notes/notes/20210214_A new place to see our reseaches.html
@@ -359,7 +359,7 @@ kbd {
 <p><footer>
     <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <span id="busuanzi_container_site_pv" style='display:none'>
-      <h6>view <span id="busuanzi_value_site_pv">       </span> times</h6>
+      <h6>view <span id="busuanzi_value_site_uv">       </span> times</h6>
     </span>
 </footer></p>
 
