--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 								<li><a href="#first" class="button small wide smooth-scroll-middle">Rresearches</a></li>
 								<li><a href="research_notes/index.html" class="button small wide smooth-scroll-middle">Notes</a></li>
 								<li><a href="#second" class="button small wide smooth-scroll-middle">More</a></li>
+							</ul> 
+							<!--
+							<ul class="actions small">
+								<li><a href="" class="button small wide smooth-scroll-middle">Send message</a></li>
 							</ul>
+							-->
 							<h1>Dr Yawei Liu (刘亚伟)</h1>
 							<h2>Biographical details</h2>
 							<p class="major">
