--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right" id="top">
 						<div class="content">
 							<ul class="actions small">
-								<li><a href="#first" class="button small wide smooth-scroll-middle">Rresearches</a></li>
+								<li><a href="#research" class="button small wide smooth-scroll-middle">Rresearches</a></li>
 								<li><a href="research_notes/index.html" class="button small wide smooth-scroll-middle">Notes</a></li>
-								<li><a href="#second" class="button small wide smooth-scroll-middle">More</a></li>
+								<li><a href="#more" class="button small wide smooth-scroll-middle">More</a></li>
 							</ul> 
 							<!--
 							<ul class="actions small">
@@ -61,7 +61,7 @@
 					</section>
 
 				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="research">
 						<div class="content">
 							<h2>Nanobubbles</h2>
 							<p>
@@ -322,7 +322,7 @@
 					</section>
 
 				<!-- Seven -->
-					<section class="wrapper style1 align-center" id="second">
+					<section class="wrapper style1 align-center" id="more">
 						<div class="inner">
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
@@ -364,6 +364,14 @@
 									</p>
 								</section>
 							</div>
+							<section class="wrapper style1 align-center" id="back">
+								<div class="inner">
+									<ul class="actions small">
+										<!--<li><a href="#research" class="button fit small">Rresearches</a></li>-->
+										<li><a href="#top" class="button fit small">Top</a></li>
+									</ul> 
+								</div>
+							</section>
 						</div>
 					</section>
 
