--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right" id="top">
+					<section id="top" class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<ul class="actions small">
-								<li><a href="#research" class="button small wide smooth-scroll-middle">Rresearches</a></li>
-								<li><a href="research_notes/index.html" class="button small wide smooth-scroll-middle">Notes</a></li>
-								<li><a href="#more" class="button small wide smooth-scroll-middle">More</a></li>
+								<li><a href="#research" class="button small wide smooth-scroll-top">Rresearches</a></li>
+								<li><a href="research_notes/index.html" class="button small wide smooth-scroll-top">Notes</a></li>
+								<li><a href="#more" class="button small wide smooth-scroll-top">More</a></li>
 							</ul> 
 							<!--
 							<ul class="actions small">
@@ -367,8 +367,8 @@
 							<section class="wrapper style1 align-center" id="back">
 								<div class="inner">
 									<ul class="actions small">
-										<!--<li><a href="#research" class="button fit small">Rresearches</a></li>-->
-										<li><a href="#top" class="button fit small">Top</a></li>
+										<!--<li><a href="#research" class="button fit small smooth-scroll-middle">Rresearches</a></li>-->
+										<li><a href="#top" class="button fit small smooth-scroll-top">Top</a></li>
 									</ul> 
 								</div>
 							</section>
