--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<section id="top" class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<ul class="actions small">
-								<li><a href="#research" class="button small wide smooth-scroll-top">Rresearches</a></li>
-								<li><a href="research_notes/index.html" class="button small wide smooth-scroll-top">Notes</a></li>
-								<li><a href="#more" class="button small wide smooth-scroll-top">More</a></li>
+								<li><a href="#research" class="button small wide smooth-scroll">Rresearches</a></li>
+								<li><a href="research_notes/index.html" class="button small wide smooth-scroll">Notes</a></li>
+								<li><a href="#more" class="button small wide smooth-scroll">More</a></li>
 							</ul> 
 							<!--
 							<ul class="actions small">
@@ -368,7 +368,7 @@
 								<div class="inner">
 									<ul class="actions small">
 										<!--<li><a href="#research" class="button fit small smooth-scroll-middle">Rresearches</a></li>-->
-										<li><a href="#top" class="button fit small smooth-scroll-top">Top</a></li>
+										<li><a href="#top" class="button fit small smooth-scroll">Top</a></li>
 									</ul> 
 								</div>
 							</section>
