--- a/projects/phoretic_transport/index.html
+++ b/projects/phoretic_transport/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Phoretic transport</title>
+		<title>Dr Yawei Liu - Phoretic transport</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
