--- a/projects/nanobubbles/index.html
+++ b/projects/nanobubbles/index.html
@@ -31,9 +31,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#questions">questions</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#timeline">Timeline</a></li>
+								<li><a href="#questions">Questions</a></li>
+								<li><a href="#work">Our work</a></li>
 								<li><a href="../../index.html">Home</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -43,23 +43,24 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+						<!-- Timeline -->
+							<article id="timeline">
+								<h2 class="major">Timeline</h2>
+								<!--<span class="image main"><img src="images/pic01.jpg" alt="" /></span>-->
+								<li><p> </p></li>
 							</article>
 
 						<!-- Questions -->
 							<article id="questions">
 								<h2 class="major">Questions</h2>
-								<p>Why are surface nanobubbles can live for extremely 
+								<li><p>Why are surface nanobubbles can live for extremely 
 									long time in experiments, and what factors can contribute 
 									to their stability and other unusual properties (e.g. contact 
-									angles)?</p>
-								<p>How do these nanobubbles form in experiments, and how 
-									can we promote or suppress the formation of them?</p>
-								<p>What is the nature of the "bulk nanobubbles" observed 
-									in experiments, and why are they stable?</p>
+									angles)?</p></li>
+								<li><p>How do these nanobubbles form in experiments, and how 
+									can we promote or suppress the formation of them?</p></li>
+								<li><p>What is the nature of the "bulk nanobubbles" observed 
+									in experiments, and why are they stable?</p></li>
 							</article>
 
 						<!-- Work -->
