--- a/academic_tree/index.html
+++ b/academic_tree/index.html
@@ -93,6 +93,21 @@
 							<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="top center" /></a>-->
 							<div class="content">
 								<div class="inner">
+									<h2>Dr. Stefano Bernardi</h2>
+									<h3>University of Sydney</h3>
+									<h4>Colleague/Collaborator</h4>
+									<p></p>
+									<ul class="actions">
+										<li><a href="http://chemeng.tju.edu.cn/cn/szdw;jsessionid=D2AD4722B294BDF1B963A67181F291D3?type=detail&id=174" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						
+						<section>
+							<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="top center" /></a>-->
+							<div class="content">
+								<div class="inner">
 									<h2>Prof. Zhongyi Jiang (姜忠义教授)</h2>
 									<h3>Tianjin University (天津大学)</h3>
 									<h4>Collaborator</h4>
