--- a/academic_tree/index.html
+++ b/academic_tree/index.html
@@ -98,7 +98,7 @@
 									<h4>Colleague/Collaborator</h4>
 									<p></p>
 									<ul class="actions">
-										<li><a href="http://chemeng.tju.edu.cn/cn/szdw;jsessionid=D2AD4722B294BDF1B963A67181F291D3?type=detail&id=174" class="button">Learn more</a></li>
+										<li><a href="https://www.sydney.edu.au/science/about/our-people/academic-staff/stefano-bernardi.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
