--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<section id="top" class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<ul class="actions small">
-								<li><a href="#research" class="button small wide smooth-scroll">Researches</a></li>
-								<li><a href="research_notes/index.html" class="button small wide smooth-scroll">Notes</a></li>
-								<li><a href="#more" class="button small wide smooth-scroll">More</a></li>
+								<li><a href="#research" class="button fit smooth-scroll">Researches</a></li>
+								<li><a href="research_notes/index.html" class="button fit smooth-scroll">Notes</a></li>
+								<li><a href="#more" class="button fit smooth-scroll">More</a></li>
 							</ul> 
 							<!--
 							<ul class="actions small">
