--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 								<div class="inner">
 									<ul class="actions small">
 										<!--<li><a href="#research" class="button fit small smooth-scroll-middle">Rresearches</a></li>-->
-										<li><a href="#top" class="button fit small smooth-scroll">Top</a></li>
+										<li><a href="#top" class="button fit smooth-scroll">Top</a></li>
 									</ul> 
 								</div>
 							</section>
