--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 		<link rel="icon" href="images/icon.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-N4Z7PKXRS8"></script>
+		<script>
+  			window.dataLayer = window.dataLayer || [];
+  			function gtag(){dataLayer.push(arguments);}
+  			gtag('js', new Date());
+
+  			gtag('config', 'G-N4Z7PKXRS8');
+		</script>
+		
 	</head>
 	<body class="is-preload">
 		
