--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<!-- Global site tag (gtag.js) - Google Analytics 
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-N4Z7PKXRS8"></script>
 		<script>
   			window.dataLayer = window.dataLayer || [];
@@ -22,6 +22,7 @@
 
   			gtag('config', 'G-N4Z7PKXRS8');
 		</script>
+		-->
 		
 	</head>
 	<body class="is-preload">
