--- a/research_notes/notes/20210217_Units conversion in dissipative particle dynamics (DPD).html
+++ b/research_notes/notes/20210217_Units conversion in dissipative particle dynamics (DPD).html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>Dr Yawei Liu - Research notes contents</title>
+<title>20210217_Units conversion in dissipative particle dynamics (DPD)</title>
 
 
 <style type="text/css">
@@ -331,22 +331,122 @@ kbd {
 
 <body>
 
-<h4 id="toc_0"><a href="../index.html">HOME</a></h4>
+<h4 id="toc_0"><a href="../../index.html">HOME</a> <a href="../index.html">CONTENTS</a></h4>
 
-<h1 id="toc_1">Contents</h1>
+<h2 id="toc_1">Units conversion in dissipative particle dynamics (DPD)</h2>
 
-<h2 id="toc_2"></h2>
+<p><em>by Yawei Liu  @Sydney, Australia 2020/01/16</em></p>
 
+<h3 id="toc_2">1. DPD model</h3>
 
-<!--CONTENTS-->
-<h4 id="toc_3">2. 2021/02/17 Units conversion in dissipative particle dynamics (DPD)
-  <a href="notes/20210217_Units conversion in dissipative particle dynamics (DPD).html">more...</a></h4>
-<h4 id="toc_3">1. 2021/02/14 A new place to see our reseaches
-  <a href="notes/20210214_A new place to see our reseaches.html">more...</a></h4>
+<p>In the DPD model [1], one DPD bead represents \(N_m\) fluid (e.g. water) molecules. Here, \(N_m\) is also called coarse-graining (CG) degree. Each pair of DPD beads \(i\) and \(j\) interact with each other via a conservative force \(\textbf{F}_{ij}^C = A (1-r_{ij}/r_c) \textbf{e}_{ij}\), a dissipative force
+\(\textbf{F}_{ij}^D = -\gamma(1-r_{ij}/r_c)^2 (\textbf{e}_{ij} \cdot \textbf{v}_{ij}) \textbf{e}_{ij}\), and a random force \(\textbf{F}_{ij}^R = \xi (1-r_{ij}/r_c) \theta_{ij} (\Delta t)^{-&frac12;} \textbf{e}_{ij}\) and all forces vanish at \(r\ge r_c\). Here,</p>
 
-<h2 id="toc_4"></h2>
+<ul>
+<li>\(r_{ij}=|\textbf{r}_{ij}|\): the centre-to-centre distance between the two beads.</li>
+<li>\(\textbf{e}_{ij}=\textbf{r}_{ij}/r_{ij}\): the unit vector pointing between the two beads.</li>
+<li>\(\textbf{v}_{ij}\): the vector difference in velocities between the two beads.</li>
+<li>\(A\): the repulsion coefficient.</li>
+<li>\(\gamma\): the dissipative coefficient.</li>
+<li>\(\xi\): the the noise strength, and \(\xi=\sqrt{2k_BT\gamma}\) with \(k_B\) the Boltzmann constant and \(T\) the temperature.</li>
+<li>\(\theta_{ij}\): a Gaussian white noise variable.</li>
+<li>\(\Delta t\): the simulation time step.</li>
+<li>\(r_c\): the cutoff distance, and also can be treated as the size (diameter) of the DPD bead.</li>
+</ul>
 
-<h4 id="toc_5"><a href="../index.html">HOME</a></h4>
+<h3 id="toc_3">2. Determining paramters</h3>
+
+<ul>
+<li>\(r_c\), \(k_BT\), \(m\) (bead mass) and \(\tau\) (time)</li>
+</ul>
+
+<p>In simulations, the reduced units are often used. For DPD model, all units are often scaled by the length unit \(r_c\), the mass unit \(m\), the energy unit \(k_BT\), and the time unit \(\tau\). Hence, \(r_c^* = m^* = (k_BT)^* =\tau^* =1\) in the simulations. The superscript asterisk (\(^*\)) means the quality is in reduced units. Units of other quantities are from these basic units. For example, the unit for the mass density is \(m/r_c^3\), the unit for the diffusion constant is \(r_c^2/\tau\).</p>
+
+<ul>
+<li>\(\rho\) (density)</li>
+</ul>
+
+<p>The DPD simulations are normally carried out within a \(NVT\) ensemble, and the number of particles are often determined by setting \(\rho^*=3\). When \(\rho^*&gt;2\), a simple scaling relation between the density and excess pressure exits [1]. In principle the density chosen for the simulation is a free parameter, but for efficiency reasons one would thus choose the lowest possible density where the scaling relation still holds.</p>
+
+<ul>
+<li>\(A\) and \(N_m\)</li>
+</ul>
+
+<p>In order to match the compressibility of DPD fluid with a liquid having the dimensionless compressibility of \(\Psi\), the interparticle repulsion coefficient \(A\) is often chosen through
+\[A\approx \frac{\Psi N_m -1}{0.2\rho^*}(k_BT)^*.\]
+For water, \(\Psi\approx 16\) yields \(A^*=25\) for \(N_m=1\) and \(A^*=104\) for \(N_m=4\).</p>
+
+<ul>
+<li>\(\gamma\) and \(\Delta t\)</li>
+</ul>
+
+<p>As a reasonable compromise between fast temperature equilibration, a fast simulation and a stable, physically meaningful system, simulation with \(\Delta t^*=0.04\) and \(\gamma^*=4.5\) is often recommended.
+However, above choice for \(\Delta t\) and \(\gamma\) yields very small Schmidt number (i.e. the ratio of viscosity to diffusion) (\(Sc\sim1\)) compared to the real fluid such as water (\(Sc\sim10^3\)). A possible solution to this problem is increasing \(\gamma\). At the same time though, \(\Delta t\) would have to be reduced to maintain the temperature control.</p>
+
+<ul>
+<li><strong>There is no unique way to determine the parameters for DPD model.</strong> For a given physical problem, with a characteristic length scale, we may always put a given number of DPD particles and parametrize the model in order to recover some macroscopic information (e.g. compressibilities, viscosity and diffusion constant).</li>
+</ul>
+
+<h3 id="toc_4">3. Units conversion</h3>
+
+<p>The conversation between DPD units (\(r_c\), \(k_BT\), \(m\) and \(\tau\)) and real units ([m], [J], [kg] and [s]) is obtained from the key macroscopic information recovered by the model. If quantities in DPD units are labeled with \(_{sim}\) and in real units are labeled with \(_{real}\), one would have</p>
+
+<ul>
+<li>\(m=N_m M_{real}/N_A\) with \(M_{real}\) the mole mass of the fluid (e.g. water) and \(N_A\) the Avogadro constant.</li>
+<li>\(r_c=(m\rho_{sim}/\rho_{real})^{1/3}\) with \(\rho_{real}\) the mass density of the fluid.</li>
+<li>\(k_BT = k_B \cdot T\) with \(k_B=1.38064853e-23\) J\(\cdot\)K and \(T\) is the system temperature in K.</li>
+<li>The time unit \(\tau\) can be chosen in different ways.
+
+<ul>
+<li>By taking the long-term self-diffusion constant into account, \(\tau=N_m r_c^2 D_{sim}/D_{real}\) with \(D\) the diffusion constant. Sometimes, this relation is also used to determine \(N_m\).</li>
+<li>If the viscous processes are the main parts, then \(\tau=r_c^2 \nu_{sim}/\nu_{real}\) with \(\nu\) the kinematic viscosity.</li>
+<li>Or \(\tau=r_c/U_{ref}\) in which the reference velocity \(U_{ref}\) is chosen as either system thermal velocity \((k_BT/m)^{&frac12;}\) or the characteristic velocity of the real flow.</li>
+</ul></li>
+</ul>
+
+<h3 id="toc_5">4. Example</h3>
+
+<p>An \(NVT\) simulation with \(1000\) DPD beads in a cubic box is carried out by LAMMPS. The parameters are: \(\rho^*=3\); \(A=104\) for \(N_m=4\); \(\gamma=100\); \(\Delta t=0.005\). Then, comparing the DPD fluid with the water at \(T=298\) K, we have:</p>
+
+<ul>
+<li>Mass \(m=1.1969\times10^{-25}\) kg (\(m=N_m M_{real}/N_A\))</li>
+<li>Length \(r_c=7.1125\times10^{-10}\) m (\(r_c=(m\rho_{sim}/\rho_{real})^{1/3}\))</li>
+<li>Energy \(k_BT = 4.1143\times10^{-21}\) J (\(k_BT = k_B \cdot T\))</li>
+<li>Time \(\tau = 3.8363\times10^{-12}\) s (\(\tau=r_c\sqrt{m/k_BT}\) )</li>
+</ul>
+
+<p>As a results, the kinematic viscosity for the DPD fluid is \(\nu=1.569 r_c^2/\tau = 2.069\times10^{-7}\) m\(^2\)/s (\(\nu=8.935\times10^{-7}\) m\(^2\)/s for water).</p>
+
+<p>Also see our published papers for some particular examples in charged systems [2,3] and vapour-liquid systems [4].</p>
+
+<h3 id="toc_6">References</h3>
+
+<p>[1] <a href="http://aip.scitation.org/doi/10.1063/1.474784">Groot, R. D.; Warren, P. B. Dissipative Particle Dynamics: Bridging the Gap between Atomistic and Mesoscopic Simulation. J. Chem. Phys. 1997, 107 (11), 4423–4435.</a></p>
+
+<p>[2] <a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.202006753">Zhang, H.; Liu, Y.; Shahidan, M. F. S.; Kinnear, C.; Maasoumi, F.; Cadusch, J.; Akinoglu, E. M.; James, T. D.; Widmer‐Cooper, A.; Roberts, A.; et al. Direct Assembly of Vertically Oriented, Gold Nanorod Arrays. Adv. Funct. Mater. 2021, 31 (6), 2006753.</a></p>
+
+<p>[3] <a href="http://aip.scitation.org/doi/10.1063/5.0025620">Wei, J.; Liu, Y.; Song, F. Coarse-Grained Simulation of the Translational and Rotational Diffusion of Globular Proteins by Dissipative Particle Dynamics. J. Chem. Phys. 2020, 153 (23), 234902.</a></p>
+
+<p>[4] <a href="http://aip.scitation.org/doi/10.1063/5.0013223">Liu, Y.; Bernardi, S.; Widmer-Cooper, A. Stability of Pinned Surface Nanobubbles against Expansion: Insights from Theory and Simulation. J. Chem. Phys. 2020, 153 (2), 024704.</a></p>
+
+<h5 id="toc_7">Github Page / Gitee Page / Subscription</h5>
+
+<p><img src="images/github_yawei.png" alt="github page" width="80" height="80" />
+<img src="images/gitee_yawei.png" alt="gitee page" width="80" height="80" />
+<img src="images/wechat.png" alt="wechat" width="80" height="80" /></p>
+
+<p><footer>
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+    <span id="busuanzi_container_page_pv" style='display:none'>
+      <h6>view <span id="busuanzi_value_page_pv">       </span> times</h6>
+    </span>
+</footer></p>
+
+<p>&copy; 2021 Yawei Liu. All rights reserved.</p>
+
+<h2 id="toc_8"></h2>
+
+<h4 id="toc_9"><a href="../../index.html">HOME</a> <a href="../index.html">CONTENTS</a></h4>
 
 
 
