Update 20210217_Units conversion in dissipative particle dynamics (DPD).html

--- a/research_notes/notes/20210217_Units conversion in dissipative particle dynamics (DPD).html
+++ b/research_notes/notes/20210217_Units conversion in dissipative particle dynamics (DPD).html
@@ -389,7 +389,7 @@ However, above choice for \(\Delta t\) and \(\gamma\) yields very small Schmidt 
 
 <h3 id="toc_4">3. Units conversion</h3>
 
-<p>The conversation between DPD units (\(r_c\), \(k_BT\), \(m\) and \(\tau\)) and real units ([m], [J], [kg] and [s]) is obtained from the key macroscopic information recovered by the model. If quantities in DPD units are labeled with \(_{sim}\) and in real units are labeled with \(_{real}\), one would have</p>
+<p>The conversion between DPD units (\(r_c\), \(k_BT\), \(m\) and \(\tau\)) and real units ([m], [J], [kg] and [s]) is obtained from the key macroscopic information recovered by the model. If quantities in DPD units are labeled with \(_{sim}\) and in real units are labeled with \(_{real}\), one would have</p>
 
 <ul>
 <li>\(m=N_m M_{real}/N_A\) with \(M_{real}\) the mole mass of the fluid (e.g. water) and \(N_A\) the Avogadro constant.</li>
