--- a/publications/publications_list.html
+++ b/publications/publications_list.html
@@ -341,7 +341,7 @@ kbd {
 
 <h4 id="toc_4"><em>See their citations in <a href="https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&amp;hl=en">Google Scholar</a></em></h4>
 
-<h5 id="toc_5">34. A dissipative particle dynamics model for studying dynamic phenomena in colloidal rod suspensions. Y Liu, A Widmer-Cooper – <span style="color:#00bfff">J. Chem. Phys.</span> Accepted <span style="color:#ff931e">[Editor&rsquo;s picks]</span></h5>
+<h5 id="toc_5">34. A dissipative particle dynamics model for studying dynamic phenomena in colloidal rod suspensions. Y Liu, A Widmer-Cooper – <span style="color:#00bfff">J. Chem. Phys.</span> Accepted <span style="color:#ff931e">[Editor&rsquo;s pick]</span></h5>
 
 <h5 id="toc_6">33. Coarse-grained simulation of the translational and rotational diffusion of globular proteins by dissipative particle dynamics. J Wei, Y Liu, F song – <span style="color:#00bfff">J. Chem. Phys.</span> 153, 234902 (2020). <a href="http://aip.scitation.org/doi/10.1063/5.0025620">\(\Rightarrow\)</a></h5>
 
