--- a/research_notes/index.html
+++ b/research_notes/index.html
@@ -339,6 +339,8 @@ kbd {
 
 
 <!--CONTENTS-->
+<h4 id="toc_3">3. 2021/02/22 From disordered to ordered: An example of self-assembly of nanorods
+  <a href="notes/20210222_From disordered to ordered- An example of self-assembly of nanorods.html">more...</a></h4>
 <h4 id="toc_3">2. 2021/02/17 Units conversion in dissipative particle dynamics (DPD)
   <a href="notes/20210217_Units conversion in dissipative particle dynamics (DPD).html">more...</a></h4>
 <h4 id="toc_3">1. 2021/02/14 A new place to see our reseaches
