--- a/research_notes/notes/20210222_From disordered to ordered- An example of self-assembly of nanorods.html
+++ b/research_notes/notes/20210222_From disordered to ordered- An example of self-assembly of nanorods.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>20210222_From disordered to ordered: An example of self-assembly of nanorods</title>
+<title>20210222_From disordered to ordered- An example of self-assembly of nanorods</title>
 
 
 <style type="text/css">
@@ -341,7 +341,7 @@ kbd {
 
 <p>One simple way to trigger the self-assembly of nanorods in the solutions is adding some non-absorbing polymers which can modify the effective interactions between the colloids via depletion attractions. The range and strength of the attraction are determined by the diameter of the polymer coils and the polymer fugacity. Once the fugacity exceeds a threshold value, the self-assembly occurs. (诱发溶液中纳米棒自组装的一种简单方法是添加一些非吸附性聚合物，这些聚合物可以通过耗尽吸引力来改变胶体之间的有效相互作用。吸引力的范围和强度取决于聚合物团的的直径和聚合物逸度。一旦聚合物逸度超过阈值，自组装就会发生。)</p>
 
-<p>One project in our group is to understand the physics involved in these self-assembly process. Understanding the underlying mechanism is necessary to cultivate efficient, facile, and economical methods for designing, fabricating and optimising these materials. (我们小组的一个项目是了解这些自组装过程中物理机制。了解这些底层机制对于通过有效、便捷和经济的制造手段实现功能材料的设计、制造和优化具有重要的意义。)</p>
+<p>One project in our group is to understand the physics involved in these self-assembly processes. Understanding the underlying mechanism is necessary to cultivate efficient, facile, and economical methods for designing, fabricating and optimising these materials. (我们小组的一个项目是了解这些自组装过程中物理机制。了解这些底层机制对于通过有效、便捷和经济的制造手段实现功能材料的设计、制造和优化具有重要的意义。)</p>
 
 <p>Now, we are preparing a paper about our recent work on the crystal nucleation of short nanorods in polymer solutions. In this paper, we will show the details of nucleation process of nanorods in different situations and how to investigate them via various simulation techniques. Here we present a video to show a typical nucleation process we observed in our simulations. (现在，我们正在准备一份关于我们最近对聚合物溶液中短纳米棒结晶成核研究工作的论文。我们将详细介绍在不同情况下纳米棒的成核过程，以及如何通过各种模拟技术对其进行研究。下面的视频显示了我们在模拟中观察到的一个典型成核-生长过程。)</p>
 
