--- a/research_notes/notes/20210222_From disordered to ordered- An example of self-assembly of nanorods.html
+++ b/research_notes/notes/20210222_From disordered to ordered- An example of self-assembly of nanorods.html
@@ -353,7 +353,7 @@ kbd {
 
 <!-- blank line -->
 
-<p>This video shows an isotropic-to-crystal nucleation and growth process of colloidal hard rods in a solution with non-adsorbing polymers. Free rods are transparent while rods in crystalline clusters are colored. Polymers are not shown for clarity. In the beginning, small crystalline clusters keep forming and dissolving due to the thermal fluctuations. After a while, one cluster survives and starts to grow laterally, leading to a single hexagonally packed layer formed eventually. (该视频显示了在具有非吸附性聚合物的溶液中胶体硬棒从各向同性液相到晶体相的成核-生长过程。处于液相的棒为部分透明显示，而晶体簇中的棒根据晶体簇大小着色。为了清楚起见，这里未显示聚合物。我们可以看到，刚开始时，由于热波动，小的晶体团簇不断形成并溶解。一段时间后，一个簇存活并开始侧向生长，最终形成单层的六角堆积结构。)</p>
+<p>This video shows an isotropic-to-crystal nucleation and growth process of colloidal hard rods in a solution with non-adsorbing polymers. Free rods are transparent while rods in crystalline clusters are colored. Polymers are not shown for clarity. In the beginning, small crystalline clusters keep forming and dissolving due to the thermal fluctuations. After a while, one cluster survives and starts to grow laterally, leading to a single hexagonally packed layer formed eventually. (该视频显示了在具有非吸附性聚合物的溶液中胶体硬棒从各向同性液相到晶体相的成核-生长过程。处于液相的棒为部分透明显示，而晶体簇中的棒根据晶体簇大小着色。为了清楚起见，这里未显示聚合物。我们可以看到，刚开始时，由于热波动，小的晶体团簇不断形成并溶解。一段时间后，某个晶体簇存活并开始侧向生长，最终形成单层的六角堆积结构。)</p>
 
 <h5 id="toc_2">Github Page / Gitee Page / Subscription</h5>
 
