--- a/research_notes/notes/20210222_From disordered to ordered- An example of self-assembly of nanorods.html
+++ b/research_notes/notes/20210222_From disordered to ordered- An example of self-assembly of nanorods.html
@@ -333,7 +333,7 @@ kbd {
 
 <h4 id="toc_0"><a href="../../index.html">HOME</a> <a href="../index.html">CONTENTS</a></h4>
 
-<h2 id="toc_1">From disordered to ordered: An example of self-assembly of nanorods</h2>
+<h2 id="toc_1">From disorder to order: An example of self-assembly of nanorods</h2>
 
 <p><em>by Yawei Liu  @Sydney, Australia 2021/02/22</em></p>
 
